Selenium Add a basic login test using selenium. Add selenium dependency into pom.xml

--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -39,7 +39,7 @@
                             </div>
 
                             <div class="text-center">
-                                <h:commandButton value="Anmelden" action="#{loginBacking.login()}"
+                                <h:commandButton id="login-cbtn" value="Anmelden" action="#{loginBacking.login()}"
                                                  styleClass="btn btn-primary"/>
                             </div>
 
